<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- General -->
	<string name="exit">Exit</string>
	<string name="app_name" translatable="false">Skylight</string>
	<string name="main_your_location">Your Location</string>
	<string name="right_now">Right now</string>
	<string name="privacy_policy">Privacy Policy</string>
	<string name="author" translatable="false">Gustav Karlsson</string>

	<!-- Errors -->
	<string name="error_unknown_update_error">An unknown error occurred while updating</string>
	<string name="error_no_internet">No internet connection</string>
	<string name="error_no_location">Could not determine location</string>
	<string name="error_no_internet_maybe">No internet connection?</string>

	<!-- Screen titles -->
	<string name="settings">Settings</string>
	<string name="about">About</string>

	<!-- Aurora chance -->
	<string name="aurora_chance_none">No Chance</string>
	<string name="aurora_chance_low">Low Chance</string>
	<string name="aurora_chance_medium">Medium Chance</string>
	<string name="aurora_chance_high">High Chance</string>
	<string name="aurora_chance_unknown">Unknown Chance</string>

	<!-- Weather -->
	<string name="main_weather_clear">Clear</string>
	<string name="main_weather_some_clouds">Some clouds</string>
	<string name="main_weather_cloudy">Cloudy</string>
	<string name="main_weather_overcast">Overcast</string>

	<!-- Intro -->
	<string name="intro_title">Welcome to Skylight</string>
	<string name="intro_desc">Skylight helps you find out if you can see the aurora by
		looking at different factors such as location, weather and time of day.
		\n\nThe app will notify you when the chance gets high enough.</string>
	<string name="intro_got_it">Got it!</string>

	<!-- Permission -->
	<string name="permission_title">Access location</string>
	<string name="permission_desc">Skylight needs access to your location to calculate the
		chances of seeing the aurora.</string>
	<string name="permission_grant">Grant</string>
	<string name="permission_required_title">Location permission required</string>
	<string name="permission_required_desc">The app uses your location to determine
		closeness to the aurora, weather conditions, and how dark it is outside.
		Please grant the permission to use the app.</string>
	<string name="permission_denied_title">Location permission denied</string>
	<string name="permission_denied_desc">This app needs access to your location to calculate the
		chances of seeing the aurora but the permission could not be acquired.</string>

	<!-- Google Play Services -->
	<string name="google_play_services_title">Install Google Play Services</string>
	<string name="google_play_services_desc">Skylight needs Google Play Services to work.</string>
	<string name="google_play_services_install">Install</string>
	<string name="google_play_services_is_not_available_title">Google Play Services
		is not available</string>
	<string name="google_play_services_is_not_available_desc">This app needs Google Play Services
		to determine the chances of seeing the aurora
		but Google Play Services is not installed on your device.</string>

	<!-- About -->
	<string name="about_app_by">App by: %s</string>
	<string name="about_branch">Branch: %s</string>
	<string name="about_version_name">Version: %s</string>
	<string name="about_version_code">Version code: %s</string>
	<string name="about_built_on">Built on: %s</string>
	<string name="about_sha1" translatable="false">SHA1: %s</string>

	<!-- HTML -->
	<string name="html_privacy_policy_link" translatable="false">
		&lt;a href="https://github.com/gustavkarlsson/skylight-android/blob/master/PRIVACY_POLICY.md"&gt;%s&lt;/a&gt;
	</string>
</resources>
