<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<com.google.android.material.appbar.MaterialToolbar
		android:id="@+id/toolbarView"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		app:title="@string/about" />

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:padding="@dimen/screen_margin">

		<ImageView
			android:id="@+id/portraitImageView"
			android:layout_width="160dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="32dp"
			android:adjustViewBounds="true"
			android:src="@drawable/about_logo"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:ignore="ContentDescription" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/appNameTextView"
			style="@style/AppTheme.TextTitleLarge"
			android:layout_width="0dp"
			android:layout_height="64dp"
			android:layout_marginTop="32dp"
			android:gravity="center"
			android:text="@string/app_name"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/portraitImageView" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/detailsTextView"
			style="@style/AppTheme.TextBody1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="24dp"
			android:gravity="center_horizontal"
			android:lineSpacingMultiplier="1.2"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/appNameTextView"
			tools:text="Version: x.y.z\nApp by: Gustav Karlsson" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/privacyPolicyLink"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/detailsTextView"
			tools:text="@string/privacy_policy" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
